[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "dao_field"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "d2py",
  "fastapi",
  "nicegui",
]

maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/DaoField"

[project.optional-dependencies]
dev = [
  "uvicorn",
  "invoke"
]
doc = [
  "sphinx==7.2.5",
  "myst-nb",
  "xyzstyle",
  "sphinx_book_theme",
  "sphinx-copybutton",
  # "sphinxcontrib-bibtex",
  "sphinx-thebe",
  "sphinx-design",
  "sphinx-automodapi",
  "sphinx-sitemap",
  "sphinx-comments",
  "invoke",
]

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['doc', '.git', '.github']
