[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "dao_field"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "d2py",
  "fastapi",
  "nicegui",
]

maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/DaoField"

[project.optional-dependencies]
dev = [
  "uvicorn",
  "invoke",
  "dash",
]
doc = [
  'PyKrige',
  'census',
  'dash',
  'dash-vtk',
  'diskcache',
  'fastapi',
  'gradio',
  'hypercorn',
  'invoke',
  'ipykernel',
  'ipywidgets>=8.0.2',
  'kaleido',
  'multiprocess',
  'myst-nb',
  'nicegui',
  'osmnx',
  'pandas',
  'pip-tools',
  'plotly',
  'plotly-geo',
  'pyarrow',
  'python-multipart',
  'rasterio',
  'rtree',
  'sklearn-xarray',
  'sphinx-automodapi',
  'sphinx-comments',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-plotly-directive',
  'sphinx-sitemap',
  'sphinx-thebe',
  'sphinx==7.2.5',
  'sphinxext-rediraffe',
  'strawberry-graphql[fastapi]',
  'streamlit',
  'us',
  'xyzstyle'
]


[tool.flit.sdist]
# include = ["docs/"]
exclude = ['doc', '.git', '.github']
